--- a/modules/apps/service-access-policy/service-access-policy-web/.classpath
+++ b/modules/apps/service-access-policy/service-access-policy-web/.classpath
@@ -18,8 +18,8 @@
 	<classpathentry kind="lib" path="/portal-master/util-java/util-java.jar" />
 	<classpathentry kind="lib" path="/portal-master/util-taglib/util-taglib.jar" />
 	<classpathentry kind="lib" path="lib/com.liferay.portal.spring.extender.jar" />
-	<classpathentry kind="lib" path="lib/com.liferay.service.access.control.profile.api.jar" />
-	<classpathentry kind="lib" path="lib/com.liferay.service.access.control.profile.service.jar" />
+	<classpathentry kind="lib" path="lib/com.liferay.service.access.policy.api.jar" />
+	<classpathentry kind="lib" path="lib/com.liferay.service.access.policy.service.jar" />
 	<classpathentry kind="lib" path="lib/org.osgi.compendium.jar" />
 	<classpathentry kind="lib" path="lib/org.osgi.core.jar" />
 	<classpathentry kind="output" path="bin" />
