--- a/portal-impl/src/content/Language.properties
+++ b/portal-impl/src/content/Language.properties
@@ -3162,6 +3162,7 @@ metadata.XMPDM.VIDEO_PIXEL_ASPECT_RATIO=Video Pixel Aspect Ratio
 metadata.XMPDM.VIDEO_PIXEL_DEPTH=Video Pixel Depth
 meter=Meter
 method=Method
+method-name=Method Name
 microsoft-outlook=Microsoft Outlook:
 microsoft-outlook-csv-file=Microsoft Outlook (.CSV file)
 middle-name=Middle Name
@@ -4669,6 +4670,7 @@ server-url=Server URL
 servers=Servers
 service=Service
 service-account=Service Account
+service-class=Service Class
 service-password=Service Password
 service-search=Service Search
 service-url=Service URL
