LPS-56580 Rename SACPEntry to ServiceAccessPolicy

--- a/modules/apps/service-access-policy/service-access-policy-service/src/service.properties
+++ b/modules/apps/service-access-policy/service-access-policy-service/src/service.properties
@@ -12,7 +12,7 @@
 ## Build
 ##
 
-    build.namespace=SACP
+    build.namespace=SAP
     build.number=1
-    build.date=1433504497178
+    build.date=1437469017172
     build.auto.upgrade=true
