--- a/modules/apps/service-access-policy/service-access-policy-service/src/service.properties
+++ b/modules/apps/service-access-policy/service-access-policy-service/src/service.properties
@@ -12,7 +12,7 @@
 ## Build
 ##
 
-    build.namespace=SACP
-    build.number=3
-    build.date=1437625250856
+    build.namespace=SAP
+    build.number=1
+    build.date=1437656135733
     build.auto.upgrade=true
